@@ -27,6 +27,7 @@ $t->get_ok('/')
   ->element_exists('input[name=handle][value=test]')
   ->element_exists_not('div.button.top a')
   ->attr_is('body','data-korap-url','')
+  ->header_exists_not('Strict-Transport-Security')
   ;
 
 is('kalamar',$t->app->sessions->cookie_name);
@@ -41,7 +42,9 @@ $t = Test::Mojo->new('Kalamar' => {
 
 $t->post_ok('/user/login' => form => { handle => 'test', pwd => 'fail' })
   ->status_is(302)
-  ->header_is('Location' => '/');
+  ->header_is('Location' => '/')
+  ->header_is('Strict-Transport-Security', 'max-age=3600; includeSubDomains')
+  ;
 
 $t->get_ok('/')
   ->status_is(200)
